--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link href="https://cdn.boxicons.com/fonts/basic/boxicons.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/css program/style2.css">
+    <link rel="stylesheet" href="/css program/style.css">
 </head>
 <!-- Toast Container -->
 <div id="toast-container"></div>
@@ -301,7 +301,8 @@
     </div>
 </footer>
 
-<script src="/js program/script2.js"></script>
+<script src="/js program/script.js"></script>
 </body>
 
 </html>
+
