--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link href="https://cdn.boxicons.com/fonts/basic/boxicons.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <!-- Toast Container -->
 <div id="toast-container"></div>
@@ -102,7 +102,7 @@
         <div class="projects-grid">
             <div class="project-card">
                 <div class="project-image">
-                    <img src="/file/67c9df6daa2103711bbf29f2_future-webdesign.jpg" alt="Modern Web App">
+                    <img src="/images/67c9df6daa2103711bbf29f2_future-webdesign.jpg" alt="Modern Web App">
                     <div class="project-overlay"></div>
                 </div>
                 <div class="project-content">
@@ -127,7 +127,7 @@
 
             <div class="project-card">
                 <div class="project-image">
-                    <img src="/file/download (1).jpg" alt="E-Commerce Platform">
+                    <img src="/images/download (1).jpg" alt="E-Commerce Platform">
                     <div class="project-overlay"></div>
                 </div>
                 <div class="project-content">
@@ -152,7 +152,7 @@
 
             <div class="project-card">
                 <div class="project-image">
-                    <img src="/file/download.jpg" alt="Analytics Dashboard">
+                    <img src="/images/download.jpg" alt="Analytics Dashboard">
                     <div class="project-overlay"></div>
                 </div>
                 <div class="project-content">
@@ -301,9 +301,10 @@
     </div>
 </footer>
 
-<script src="script.js"></script>
+<script src="/script.js"></script>
 </body>
 
 </html>
+
 
 
