--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link href="https://cdn.boxicons.com/fonts/basic/boxicons.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="Portfolio/style2.css">
+    <link rel="stylesheet" href="Portfolio/style.css">
 </head>
 <!-- Toast Container -->
 <div id="toast-container"></div>
@@ -305,6 +305,7 @@
 </body>
 
 </html>
+
 
 
 
