--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div class="projects-grid">
             <div class="project-card">
                 <div class="project-image">
-                    <img src="/images/67c9df6daa2103711bbf29f2_future-webdesign.jpg" alt="Modern Web App">
+                    <img src="images/67c9df6daa2103711bbf29f2_future-webdesign.jpg" alt="Modern Web App">
                     <div class="project-overlay"></div>
                 </div>
                 <div class="project-content">
@@ -127,7 +127,7 @@
 
             <div class="project-card">
                 <div class="project-image">
-                    <img src="/images/download (1).jpg" alt="E-Commerce Platform">
+                    <img src="images/download (1).jpg" alt="E-Commerce Platform">
                     <div class="project-overlay"></div>
                 </div>
                 <div class="project-content">
@@ -152,7 +152,7 @@
 
             <div class="project-card">
                 <div class="project-image">
-                    <img src="/images/download(2).jpg" alt="Analytics Dashboard">
+                    <img src="images/download(2).jpg" alt="Analytics Dashboard">
                     <div class="project-overlay"></div>
                 </div>
                 <div class="project-content">
@@ -305,6 +305,7 @@
 </body>
 
 </html>
+
 
 
 
