--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
             <div class="project-card">
                 <div class="project-image">
-                    <img src="images/download(2).jpg" alt="Analytics Dashboard">
+                    <img src="images/download.jpg" alt="Analytics Dashboard">
                     <div class="project-overlay"></div>
                 </div>
                 <div class="project-content">
@@ -305,6 +305,7 @@
 </body>
 
 </html>
+
 
 
 
